# LLMASP

./: .gitignore  README.md  pyproject.toml
autotraining/: example.csv  main.py
src/: Evaluator.py  ExecutorHandler.py  LLMASP.py  LLMHandler.py  R2Asp.py  TaskHandler.py  check_validity.py  code.asp  config.yml  main.py  pdf_maker.py  story_maker.py
src/config/: api_key.json
src/examples/: restaurant.yml  restaurant_linked.yml
src/examples/restaurant_example/: config.yml
src/inputHandlers/: abstractInputHandler.py  evaluateInput.py
src/outputHandlers/: abstractOutputHandler.py  evaluateOutput.py  executeOutput.py
src/restaurant_example/: code.asp  config.yml  example.json  rag_db.yml  valasp.yml
src/utils/: LLMHandler.py  classBuilder.py  customInstructor.py  links.py  ollamaInstructor.py
test/: test_LLMASP.py  test_R2Asp.py
