[tool.poetry]
name = "llmasp"
version = "0.1.0"
description = ""
authors = ["Lorenzo Grillo", "Mario Alviano <mario.alviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typeguard = "^4.2.1"
g4f = "^0.2.7.2"
pyyaml = "^6.0.1"
dumbo-asp = "^0.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
